instalacao module federation e configuracao do shell abrindo o mfe

--- a/libs/ui/src/lib/header/header.component.html
+++ b/libs/ui/src/lib/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <h1>{{ title }}</h1>
-  <nav>
+  <nav style="color: white">
     <a routerLink="/home" routerLinkActive="active">Home</a>
-    <a routerLink="/login" routerLinkActive="active">Login</a>
+    <a routerLink="/auth" routerLinkActive="active">Login</a>
   </nav>
 </header>
